1204 menu在icon寬度時，保留setting的icon close close #89

--- a/www/learn_flashcard_transition.html
+++ b/www/learn_flashcard_transition.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="note">
-        <ons-icon icon="ion-compose" fixed-width="true" class="compose"></ons-icon>
+        <ons-icon icon="ion-edit" fixed-width="true" class="compose"></ons-icon>
 
         <span class="your-note pre" 
               ng-show="(ctl_learn_flashcard.var.learn_flashcard_transition.note !== null)">{{ ctl_learn_flashcard.var.learn_flashcard_transition.note}}</span>
