--- a/www/menu.html
+++ b/www/menu.html
@@ -53,7 +53,7 @@
         
         <ons-list-item ng-click="ctl_note_list.enter();
             menu_click($event);">
-            <ons-icon icon="ion-ios-compose-outline" fixed-width="true"></ons-icon>
+            <ons-icon icon="ion-edit" fixed-width="true"></ons-icon>
             <span class="menu-label">
                 筆記列表
             </span>
