--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="note" ng-click="ctl_note.enter()">
-        <ons-icon icon="ion-compose" fixed-width="true" class="compose"></ons-icon>
+        <ons-icon icon="ion-edit" fixed-width="true" class="compose"></ons-icon>
 
         <span class="your-note pre" 
               ng-show="(ctl_learn_flashcard.var.learn_flashcard.note !== null)">{{ ctl_learn_flashcard.var.learn_flashcard.note}}</span>
