--- a/www/setting.html
+++ b/www/setting.html
@@ -28,6 +28,7 @@
                 </ons-col>
                 <ons-col style="text-align: right;">
                     <input type="text" ng-model="profile.name"
+                           ng-change="db_status.save_status('profile')"
                            class="text-input text-input--transparent"
                            placeholder="請輸入您的名字"
                            style="width:calc(100% - 30px);font-size: 17px;line-height: 44px;margin:0;">
