--- a/www/note_list_view.html
+++ b/www/note_list_view.html
@@ -13,7 +13,7 @@
         <div class="center">{{ ctl_note_list.var.q }} 筆記</div>
 
         <div class="right"
-             ng-class="{'target-completed': (ctl_target.status.take_note.done > ctl_target.status.take_note.target-1)}"
+             ng-class="{'target-incompleted': (ctl_target.status.take_note.done < ctl_target.status.take_note.target)}"             
              ng-click="ctl_target.enter_for_view()"
              ng-show="ctl_target.status.take_note.target !== 0">
             {{ ctl_target.status.take_note.done}} / {{ ctl_target.status.take_note.target}}
