--- a/www/target_init.html
+++ b/www/target_init.html
@@ -11,14 +11,14 @@
         <ons-list modifier="inset">
             <ons-list-item ng-repeat="data in ctl_target.status" 
                            ng-init="setting = ctl_target.var.target_setting[$index]"
-                           ng-show="ctl_target.get_max_target(setting.key) > 0">
+                           ng-class="{'bg-success': (ctl_target.get_max_target(setting.key) === 0)}">
                 <ons-row>
                     <ons-col class="title" ng-click="ctl_target.show_help(setting.key)">
                         {{setting.title}}
                         <ons-icon icon="ion-ios-help-outline" fixed-width="true"></ons-icon>
                     </ons-col>
 
-                    <ons-col width="50" style="text-align: right">
+                    <ons-col width="50" style="text-align: right" ng-show="(ctl_target.get_max_target(setting.key) > 0)">
                         <ons-icon icon="ion-ios-minus-outline" fixed-width="true" 
                                   ng-click="ctl_target.change_target_number($event, -1)"></ons-icon>
                         <input min="{{setting.min}}" max="{{ ctl_target.get_max_target(setting.key)}}" type="number" 
@@ -28,10 +28,13 @@
                         <ons-icon icon="ion-ios-plus-outline" fixed-width="true" 
                                   ng-click="ctl_target.change_target_number($event, 1)"></ons-icon>
                     </ons-col>
+                    <ons-col width="50" style="text-align: right"  ng-show="(ctl_target.get_max_target(setting.key) === 0)">
+                        已經全部完成
+                    </ons-col>
                 </ons-row>
-                <ons-row class="recommend">
+                <ons-row class="recommend" ng-show="(ctl_target.get_max_target(setting.key) > 0)">
                     <ons-col align="right">
-                        {{ ctl_target.get_remained_target(setting.key)}}
+                        {{ ctl_target.get_max_target(setting.key)}}
                         {{ 'TARGET_MENU_IMCOMPLETE' | translate }}
                     </ons-col>
                 </ons-row>
