--- a/www/setting.html
+++ b/www/setting.html
@@ -31,6 +31,7 @@
                            ng-change="db_status.save_status('profile')"
                            class="text-input text-input--transparent"
                            placeholder="請輸入您的名字"
+                           name="name"
                            style="width:calc(100% - 30px);font-size: 17px;line-height: 44px;margin:0;">
                 </ons-col>
             </ons-row>
