--- a/www/test_select.html
+++ b/www/test_select.html
@@ -74,7 +74,7 @@
         
     <!-- ===================================== -->
 
-    <div ng-show="(ctl_test_select.var.test_select.answer !== undefined)">
+    <div ng-show="(ctl_test_select.var.test_select.answer !== undefined)" ng-click="ctl_test_select.next(true);">
         <div class="result correct" 
              ng-show="(ctl_test_select.var.test_select.answer === ctl_test_select.var.test_select.correct)">
             {{ "TEST_SELECT_ANSWER_CORRECT" | translate }}
