--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@
 
         <title>{{ 'TITLE' | translate }}</title>
 
+        <link rel="shortcut icon" type="image/png" href="img/Voc4Fun-icon256.png"/>
     </head>
 
     <!-- ======================================== 
