--- a/www/index.html
+++ b/www/index.html
@@ -101,6 +101,7 @@
     <!-- cordova -->
     <script src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="tts.js"></script>
+    <script type="text/javascript" charset="utf-8" src="telephonenumber.js"></script>
 
     <!-- ========================================= -->
 
@@ -158,7 +159,14 @@
                         $scope.db_status.ready(function () {
                             if ($scope.CONFIG.qunit === false && $._GET("qunit") !== "1") {
                                 ons.ready(function () {
-                                    _app_ready($scope);
+                                    if (typeof(cordova) === "object") {
+                                        document.addEventListener("deviceready", function () {
+                                            _app_ready($scope);
+                                        }, false);
+                                    }
+                                    else {
+                                        _app_ready($scope);
+                                    }
                                 });
                             }
                             else {
