--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
         <link rel="stylesheet" href="pulipuli-utils/css/bootstrap.css" />
 
         <link rel="stylesheet" href="css/page-about_html.css" />
+        <link rel="stylesheet" href="css/controller_profile.css" />
         <link rel="stylesheet" href="css/controller_target.css" />
         <link rel="stylesheet" href="css/controller_learn_flashcard.css" />
         <link rel="stylesheet" href="css/controller_note.css" />
@@ -159,15 +160,16 @@
                         $scope.db_status.ready(function () {
                             if ($scope.CONFIG.qunit === false && $._GET("qunit") !== "1") {
                                 ons.ready(function () {
-                                    if (typeof(cordova) === "object") {
-                                        alert("等待");
-                                        document.addEventListener("deviceready", function () {
-                                            _app_ready($scope);
-                                        }, false);
-                                    }
-                                    else {
-                                        _app_ready($scope);
-                                    }
+                                    //if (typeof(cordova) === "object") {
+                                        //alert("等待");
+                                    //    document.addEventListener("deviceready", function () {
+                                    //        _app_ready($scope);
+                                    //    }, false);
+                                    //}
+                                    //else {
+                                    //    _app_ready($scope);
+                                    //}
+                                    _app_ready($scope);
                                 });
                             }
                             else {
