--- a/www/profile.html
+++ b/www/profile.html
@@ -14,7 +14,7 @@
 
         <ons-row>
             <ons-col align="center">
-                請輸入您的姓名 
+                請輸入您的姓名  <!-- @TODO 語系 -->
             </ons-col>
         </ons-row>
 
@@ -22,8 +22,8 @@
             <ons-col align="center">
             <input type="text" ng-model="profile.name"
                    class="text-input text-input--underbar"
-                   style="text-align:center;font-size: x-large;margin-top: 1rem;"
-                   placeholder="請輸入您的名字">
+                   style="text-align:center;font-size: x-large;margin-top: 1rem;width: calc(100% - 20px);height: 60px;"
+                   placeholder="請輸入您的名字"> <!-- @TODO 語系 -->
             </ons-col>
         </ons-row>
 
