20160314 - 字典與GOOGLE圖片搜尋(含LOG紀錄)

--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
 
         <!-- CSS dependencies -->
         <link rel="stylesheet" href="lib/onsen/css/onsenui.css" />
+		<link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css" />
 
         <!-- CSP support mode (required for Windows Universal apps) -->
         <link rel="stylesheet" href="lib/angular/angular-csp.css" />
@@ -39,6 +40,7 @@
         <link rel="stylesheet" href="css/controller_learn_flashcard.css" />
         <link rel="stylesheet" href="css/controller_note.css" />
         <link rel="stylesheet" href="css/controller_test_select.css" />
+		
 
         <title>{{ 'TITLE' | translate }}</title>
 
