--- a/www/target_edit.html
+++ b/www/target_edit.html
@@ -1,6 +1,6 @@
 <ons-page id="target_edit_html" class="target-page" 
           ng-device-backbutton="$($event.target).find('form').submit()">
-    <form ng-submit="ctl_target.set_target($event);
+    <form ng-submit="ctl_target.set_target($event); ctl_target.set_target_survey();
             app.navi.popPage();">
         <ons-toolbar>
             <div class="center">{{ ctl_target.get_set_title()}}</div>
@@ -40,6 +40,8 @@
                     </ons-col>
                 </ons-row>
             </ons-list-item>
+			
+		
         </ons-list>
 
         <!-- ======================================= -->
