0314 加入重置功能 update

--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -55,7 +55,7 @@
 			<ons-col width=25% ng-click="ctl_activity.dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'yahoo')">
 				<div style="text-align:center; cursor:pointer;">
 					<ons-icon icon="ion-ios-book" fixed-width="true" class="yahhoo-dictionary" ></ons-icon>
-					YAHOO字典
+					中英字典
 				</div>
 			</ons-col>
 			<ons-col width=25% ng-click="ctl_activity.dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'synonym')">
@@ -72,7 +72,7 @@
 			</ons-col>
 			<ons-col width=25% ng-click="ctl_activity.image_search(ctl_learn_flashcard.var.learn_flashcard.q)">
 				<div style="text-align:center; cursor:pointer;">
-					<ons-icon icon="ion-search" fixed-width="true" class="image-search" ></ons-icon>
+					<ons-icon icon="ion-image" fixed-width="true" class="image-search" ></ons-icon>
 					圖片搜尋
 				</div>	
 			</ons-col>			
