--- a/www/menu.html
+++ b/www/menu.html
@@ -6,7 +6,7 @@
                  menu_click($event);"
              ng-show"ctl_target.get_complete_percent() !== undefined" >
              {{ ctl_profile.status.name}} 
-            <div ng-show="ctl_target.is_target_setted()"
+            <div ng-show="ctl_target.is_target_setted() && !CONFIG.control_group_version"
                  ng-class="{'target-incompleted': (ctl_target.get_complete_percent() < 100)}">
                 {{ 'TARGET_MENU_STATUS' | translate }}
                 <span class="complete-percent" > {{ ctl_target.get_complete_percent()}}%</span> 
@@ -25,14 +25,14 @@
 
     <ons-list>
         <ons-list-item ng-click="ctl_target.enter_from_menu();
-            menu_click($event);">
+            menu_click($event);" ng-show="!CONFIG.control_group_version">
             <ons-icon icon="ion-ios-pie-outline" fixed-width="true"></ons-icon>
             <span class="menu-label">
                 {{ 'TARGET_MENU_TITLE' | translate }}
             </span>
             <span  class="right" style="float:right" 
                    ng-class="{'target-incompleted': (ctl_target.get_complete_percent() < 100)}"
-                   ng-show="ctl_target.is_target_setted()">
+                   ng-show="ctl_target.is_target_setted() && !CONFIG.control_group_version">
                 {{ ctl_target.get_complete_percent()}}%
             </span>
         </ons-list-item>
@@ -46,7 +46,7 @@
 
             <span  class="right" style="float:right"
                    ng-class="{'target-incompleted': (ctl_target.status.learn_flashcard.done < ctl_target.status.learn_flashcard.target)}"
-                   ng-show="ctl_target.status.learn_flashcard.target !== 0">
+                   ng-show="ctl_target.status.learn_flashcard.target !== 0 && !CONFIG.control_group_version">
                 {{ ctl_target.status.learn_flashcard.done}} / {{ ctl_target.status.learn_flashcard.target}}
             </span>
         </ons-list-item>
@@ -60,7 +60,7 @@
 
             <span  class="right" style="float:right"
                    ng-class="{'target-incompleted': (ctl_target.status.take_note.done < ctl_target.status.take_note.target)}"
-                   ng-show="ctl_target.status.take_note.target !== 0">
+                   ng-show="ctl_target.status.take_note.target !== 0 && !CONFIG.control_group_version">
                 {{ ctl_target.status.take_note.done}} / {{ ctl_target.status.take_note.target}}
             </span>
         </ons-list-item>
@@ -73,7 +73,7 @@
             </span>
             <span class="right" style="float:right"
                   ng-class="{'target-incompleted': (ctl_target.status.test_select.done < ctl_target.status.test_select.target)}"
-                  ng-show="ctl_target.status.test_select.target !== 0">
+                  ng-show="ctl_target.status.test_select.target !== 0 && !CONFIG.control_group_version">
                 {{ ctl_target.status.test_select.done}} / {{ ctl_target.status.test_select.target}}
             </span>
         </ons-list-item>
