--- a/www/setting.html
+++ b/www/setting.html
@@ -37,7 +37,7 @@
             </ons-row>
         </ons-list-item>
         
-        <ons-list-item modifier="chevron" ng-click="app.navi.pushPage('target_edit.html')">
+        <ons-list-item modifier="chevron" ng-click="app.navi.pushPage('target_edit.html')" ng-show="!CONFIG.control_group_version">
             <ons-icon icon="ion-ios-pie" size="20px"></ons-icon>
             設定目標
         </ons-list-item>
