--- a/www/test_select_transition.html
+++ b/www/test_select_transition.html
@@ -19,7 +19,7 @@
         <div class="right"
              ng-init="_target_data = ctl_target.status.test_select" 
              ng-class="{'target-incompleted': (_target_data.done < _target_data.target)}"
-             ng-show="_target_data.target !== 0">
+             ng-show="_target_data.target !== 0 && !CONFIG.control_group_version">
             {{ _target_data.done}} / {{ _target_data.target}}
         </div>
     </ons-toolbar>
