0314 開始處理筆記的問題

--- a/www/about.html
+++ b/www/about.html
@@ -3,12 +3,13 @@
 
     <ons-toolbar>
         <div class="left">
-            <ons-toolbar-button ng-click="app.menu.open()" class="menu-open">
+            <ons-toolbar-button ng-click="app.navi.popPage()">
                 <span class="toolbar-button--quiet navigation-bar__line-height" >
-                    <ons-icon icon="ion-navicon" fixed-width="true"></ons-icon>
+                    <i class="ion-android-arrow-back"></i>
                 </span>
             </ons-toolbar-button>
         </div>
+        
         <div class="center">
             {{ 'ABOUT' | translate}}
         </div>
