--- a/www/note.html
+++ b/www/note.html
@@ -54,7 +54,7 @@
     <!-- ==================================== -->
 
     <ons-tabbar ng-click="ctl_note.submit($event)">
-        <ons-tab label="{{ 'ONS_OK' | translate }}" ></ons-tab>
+        <ons-tab label="{{ 'ONS_SAVE' | translate }}" ></ons-tab>
     </ons-tabbar>
 
 </ons-page>
