--- a/www/note_list_view.html
+++ b/www/note_list_view.html
@@ -53,7 +53,7 @@
     <!-- ==================================== -->
 
     <ons-tabbar ng-click="ctl_note_list.submit($event);">
-        <ons-tab label="{{ 'ONS_OK' | translate }}" ></ons-tab>
+        <ons-tab label="{{ 'ONS_SAVE' | translate }}" ></ons-tab>
     </ons-tabbar>
 
 </ons-page>
